tests/error/type_match/base_case_tuple_mismatched_elem_count2.bz
// error: unable to match type '[i32]' to '[i32, f64]'
// note: mismatched tuple element counts: 1 and 2
function test()
{
	let _: [i32, f64] = [i32]();
}
